--- a/localisation/replace/aml_victory_points_l_english.yml
+++ b/localisation/replace/aml_victory_points_l_english.yml
@@ -18,11 +18,13 @@
  VICTORY_POINTS_15002:0 "Tol Ahrem"
  VICTORY_POINTS_15001:0 "Qarghi"
  VICTORY_POINTS_15004:0 "Qapeta"
- VICTORY_POINTS_16340:0 "Nakhalgluta"
+ VICTORY_POINTS_16340:0 "Nakhlagluta"
  VICTORY_POINTS_12929:0 "Fragneilo"
  VICTORY_POINTS_16343:0 "Tol Ahrem"
  VICTORY_POINTS_16345:0 "Qapeta"
  VICTORY_POINTS_16342:0 "Qarghi"
+ VICTORY_POINTS_13062:0 "Chersky"
+ 
  
  #Australia
  VICTORY_POINTS_8186:0 "Port Augusta"
@@ -46,274 +48,249 @@
  VICTORY_POINTS_14060:0 "Cesepaglia"
  VICTORY_POINTS_14058:0 "Nythrengroth"
 #Mu
-VICTORY_POINTS_14748:0 "Vaalele Malolo"
-VICTORY_POINTS_14745:0 "Kororareka"
-VICTORY_POINTS_14773:0 "Wainuiomo"
-VICTORY_POINTS_14817:0 "Aai O Le Togavao"
-VICTORY_POINTS_14769:0 "Mauga O Molimau"
-VICTORY_POINTS_14704:0 "Faanoanoa"
-VICTORY_POINTS_14824:0 "Setimana"
-VICTORY_POINTS_14826:0 "Zala Osta"
-VICTORY_POINTS_14879:0 "Alale'a Tagi"
-VICTORY_POINTS_14908:0 "Mafuie"
-VICTORY_POINTS_14869:0 "Tolu Laau"
-VICTORY_POINTS_14855:0 "Oi' Oi"
-VICTORY_POINTS_14839:0 "Lanu Omea"
-VICTORY_POINTS_14914:0 "Miriamsville"
-VICTORY_POINTS_14920:0 "Pennston"
-VICTORY_POINTS_14934:0 "Wrightston"
-VICTORY_POINTS_14936:0 "Germaniahafen"
-VICTORY_POINTS_14949:0 "Von Isignystadt"
-VICTORY_POINTS_14966:0 "Navheza"
-VICTORY_POINTS_14977:0 "Duneyig"
-VICTORY_POINTS_14960:0 "Tegzusuqu"
-VICTORY_POINTS_14988:0 "Hatmaq"
-VICTORY_POINTS_14998:0 "Geqijji"
-VICTORY_POINTS_15006:0 "Duqun"
-VICTORY_POINTS_15043:0 "Joramlabnaj"
-VICTORY_POINTS_15057:0 "Marinswade"
-VICTORY_POINTS_15053:0 "Port Bounty"
-VICTORY_POINTS_15050:0 "Angelston"
-VICTORY_POINTS_15073:0 "Solstice Harbor"
-VICTORY_POINTS_15074:0 "Lionelville"
-VICTORY_POINTS_15082:0 "Name Please"
-VICTORY_POINTS_15085:0 "Waponi Woo"
-VICTORY_POINTS_15097:0 "Qna'a"
-VICTORY_POINTS_15107:0 "Q'tir"
-VICTORY_POINTS_15114:0 "Inirliq"
-VICTORY_POINTS_15137:0 "Girgu"
-VICTORY_POINTS_15149:0 "Neji"
-VICTORY_POINTS_15162:0 "Virqq"
-VICTORY_POINTS_15163:0 "Asetale"
-VICTORY_POINTS_15178:0 "Vatpagchi Saeli"
-VICTORY_POINTS_15176:0 "Muguraq"
-VICTORY_POINTS_15206:0 "Zochtil"
-VICTORY_POINTS_15209:0 "Labn"
-VICTORY_POINTS_15244:0 "Manka"
-VICTORY_POINTS_15246:0 "Nofoaga Agava'a"
-VICTORY_POINTS_15248:0 "Awa"
-VICTORY_POINTS_15257:0 "Vaitafe Matagofie"
-VICTORY_POINTS_15269:0 "Tafolafaga"
-VICTORY_POINTS_15280:0 "Leai Ni Laau"
-VICTORY_POINTS_15292:0 "Laautalatala"
-VICTORY_POINTS_15299:0 "Tuugamau O Lafu"
-VICTORY_POINTS_15307:0 "'Aofa'arua'i"
-VICTORY_POINTS_15328:0 "Campo Santo"
-VICTORY_POINTS_15316:0 "Ciudad de Todorov"
-VICTORY_POINTS_15317:0 "Tatea"
-VICTORY_POINTS_15320:0 "Liberacion"
-VICTORY_POINTS_15339:0 "Tierra Peligrosa"
-VICTORY_POINTS_15350:0 "Grasport"
-VICTORY_POINTS_15360:0 "Sable Blanc"
-VICTORY_POINTS_15368:0 "Nouvelle-Chambery"
-VICTORY_POINTS_15403:0 "Duhuaz"
-VICTORY_POINTS_15407:0 "Arquvon"
-VICTORY_POINTS_15395:0 "Jallivizen"
-VICTORY_POINTS_15392:0 "San Leandro"
-VICTORY_POINTS_15387:0 "Salchicha"
-VICTORY_POINTS_15374:0 "Cruz de San Andres"
-VICTORY_POINTS_15417:0 "Groene Velden"
-VICTORY_POINTS_15425:0 "Oranjehaven"
-VICTORY_POINTS_15462:0 "Poguinho"
-VICTORY_POINTS_15452:0 "Sao Vicente"
-VICTORY_POINTS_15440:0 "Touro Preto"
-VICTORY_POINTS_15432:0 "Solquente"
-VICTORY_POINTS_15470:0 "Geestbai"
-VICTORY_POINTS_15482:0 "Santa Florentina"
-VICTORY_POINTS_14395:0 "Arena de Oro"
-VICTORY_POINTS_14384:0 "Salvacion"
-VICTORY_POINTS_15487:0 "San Pedro"
-VICTORY_POINTS_14398:0 "Neu Dresden"
-VICTORY_POINTS_14401:0 "Gelbhaken"
-VICTORY_POINTS_14409:0 "Bosestadt"
-VICTORY_POINTS_14406:0 "Winterbucht"
-VICTORY_POINTS_14424:0 "Subwasser"
-VICTORY_POINTS_14435:0 "Konigshafen"
-VICTORY_POINTS_14449:0 "Reichhaltige"
-VICTORY_POINTS_14445:0 "Karlsbaden"
-VICTORY_POINTS_14535:0 "Blauwasser"
-VICTORY_POINTS_14534:0 "Schonestrand"
-VICTORY_POINTS_14480:0 "Silberne Stabe"
-VICTORY_POINTS_14510:0 "Edwardsberg"
-VICTORY_POINTS_14573:0 "Pitkairn"
-VICTORY_POINTS_14944:0 "Nyronne"
-VICTORY_POINTS_16375:0 "Hangshuen"
-VICTORY_POINTS_15635:0 "Lyunamtsam"
-VICTORY_POINTS_14589:0 "Yahounan"
-VICTORY_POINTS_14582:0 "Yimutsyu"
-VICTORY_POINTS_15642:0 "Bongo"
-VICTORY_POINTS_14603:0 "Hwutangrun"
-VICTORY_POINTS_14610:0 "Shamseng"
-VICTORY_POINTS_14646:0 "Lanumeamata"
-VICTORY_POINTS_14625:0 "Savakiki"
-VICTORY_POINTS_14676:0 "Araphohue"
-VICTORY_POINTS_14700:0 "Marie's Landing"
-VICTORY_POINTS_14698:0 "Victoria"
-VICTORY_POINTS_14615:0 "Vavae Ese"
-VICTORY_POINTS_14622:0 "Ofoofogia"
-VICTORY_POINTS_14753:0 "Loto Aai"
-VICTORY_POINTS_14754:0 "Hapua-waikawa"
-VICTORY_POINTS_14760:0 "Kohinui"
-VICTORY_POINTS_14761:0 "Pokemon"
-VICTORY_POINTS_14595:0 "Weyluchanao"
-VICTORY_POINTS_14590:0 "Inaluregwoi"
-VICTORY_POINTS_14725:0 "Inhumuku"
-
-#Atlantis and Co
-VICTORY_POINTS_15488:0 "Altenin"
-VICTORY_POINTS_15493:0 "Pukerfjall"
-VICTORY_POINTS_15496:0 "Gudir Hjam"
-VICTORY_POINTS_15530:0 "Akitselo"
-VICTORY_POINTS_15500:0 "Zuhaitz"
-VICTORY_POINTS_15512:0 "Doxa"
-VICTORY_POINTS_15525:0 "Osoa"
-VICTORY_POINTS_15516:0 "Anoixte"
-VICTORY_POINTS_15498:0 "Taidorie"
-VICTORY_POINTS_15497:0 "Chuzaseit"
-VICTORY_POINTS_15492:0 "Tashrets"
-VICTORY_POINTS_15598:0 "Takam"
-VICTORY_POINTS_15599:0 "Maxat"
-VICTORY_POINTS_15506:0 "Inaxe"
-VICTORY_POINTS_15531:0 "Burmiunean"
-VICTORY_POINTS_13010:0 "Reitanitz"
-VICTORY_POINTS_15519:0 "Yamylaik"
-
-#American Replacements
-VICTORY_POINTS_12572:0 "Great Sky"
-VICTORY_POINTS_7779:0 "Todd City"
-VICTORY_POINTS_11658:0 "Manzanita"
-VICTORY_POINTS_610:0 "Eureka"
-VICTORY_POINTS_4607:0 "San Andreas"
-VICTORY_POINTS_12571:0 "Sampson"
-VICTORY_POINTS_10548:0 "Mannerton" 
-VICTORY_POINTS_7820:0 "Cordial"
-VICTORY_POINTS_15549:0 "Ollebo"
-VICTORY_POINTS_15546:0 "Rycroft"
-VICTORY_POINTS_4854:0 "Marquete"
-VICTORY_POINTS_15560:0 "Punta Bruja"
-VICTORY_POINTS_3712:0 "Concord"
-VICTORY_POINTS_6909:0 "New Haven"
-VICTORY_POINTS_6732:0 "Boston"
-VICTORY_POINTS_4445:0 "Montpelier"
-VICTORY_POINTS_3732:0 "Augusta"
-VICTORY_POINTS_9758:0 "Wilmington"
-
-#Lemuria
-VICTORY_POINTS_14489:0 "Huitrier"
-VICTORY_POINTS_16239:0 "Horaka"
-VICTORY_POINTS_14783:0 "Jandhragara"
-VICTORY_POINTS_16064:0 "Myrddin"
-VICTORY_POINTS_16040:0 "Pendleville"
-VICTORY_POINTS_16153:0 "Toqueville"
-VICTORY_POINTS_14459:0 "Ellesburg"
-VICTORY_POINTS_14482:0 "Romanobile"
-VICTORY_POINTS_15653:0 "New Valkenburg"
-VICTORY_POINTS_16088:0 "Shilvertown"
-VICTORY_POINTS_16113:0 "Kalgatunga"
-VICTORY_POINTS_15934:0 "Velaccamaveiyil"
-VICTORY_POINTS_15900:0 "Turamu"
-VICTORY_POINTS_15761:0 "Worrorra"
-VICTORY_POINTS_15770:0 "Audenshire"
-VICTORY_POINTS_15792:0 "Pilesbury"
-VICTORY_POINTS_14556:0 "Anchwhirram"
-VICTORY_POINTS_15832:0 "Guhrnstown"
-VICTORY_POINTS_15860:0 "Kilespost"
-VICTORY_POINTS_15842:0 "Meyerston"
-VICTORY_POINTS_15804:0 "New Hampstead"
-VICTORY_POINTS_16303:0 "Lemisara"
-VICTORY_POINTS_15752:0 "Venduruntana"
-VICTORY_POINTS_16282:0 "Biloka"
-VICTORY_POINTS_15606:0 "Terku"
-VICTORY_POINTS_16206:0 "Kasharaan"
-VICTORY_POINTS_15607:0 "Vila de Sao Nicola"
-VICTORY_POINTS_16272:0 "Ilayaci"
-VICTORY_POINTS_15926:0 "Dalu"
-VICTORY_POINTS_15967:0 "Pitiychola"
-VICTORY_POINTS_15977:0 "Tiwi"
-VICTORY_POINTS_14448:0 "Dansoist"
-VICTORY_POINTS_15685:0 "Shahan"
-VICTORY_POINTS_15684:0 "Attupil"
-VICTORY_POINTS_14536:0 "Yirram"
-VICTORY_POINTS_14457:0 "Tinton"
-VICTORY_POINTS_15827:0 "Melton"
-VICTORY_POINTS_14518:0 "Nana Station"
-VICTORY_POINTS_14504:0 "Elsinore"
-VICTORY_POINTS_15833:0 "Petersby"
-VICTORY_POINTS_15786:0 "Vikteria"
-VICTORY_POINTS_15776:0 "Pama Station"
-VICTORY_POINTS_14472:0 "Tetinar"
-VICTORY_POINTS_16072:0 "Morganastown"
-VICTORY_POINTS_16036:0 "Agarston"
-VICTORY_POINTS_15681:0 "Palivari"
-VICTORY_POINTS_15683:0 "Merkku"
-VICTORY_POINTS_15686:0 "Kumagandarivi"
-VICTORY_POINTS_14464:0 "Nusedrimana"
-VICTORY_POINTS_14466:0 "Manhakadrigiri"
-VICTORY_POINTS_15713:0 "Atika"
-VICTORY_POINTS_15720:0 "Bhamavani"
-VICTORY_POINTS_15728:0 "Nandrigura"
-VICTORY_POINTS_15739:0 "Tumi"
-VICTORY_POINTS_15731:0 "Desdinraga"
-VICTORY_POINTS_14570:0 "Mulatanam"
-VICTORY_POINTS_15930:0 "Laragiya"
-VICTORY_POINTS_15906:0 "Daly"
-VICTORY_POINTS_15960:0 "Kura Kati"
-VICTORY_POINTS_15970:0 "Gundrasupotla"
-VICTORY_POINTS_15981:0 "Umbugaria"
-VICTORY_POINTS_15609:0 "Nilam"
-VICTORY_POINTS_15987:0 "Sitanamupra"
-VICTORY_POINTS_15994:0 "Deviyo"
-VICTORY_POINTS_15621:0 "Kantoru"
-VICTORY_POINTS_16023:0 "Denitoramma"
-VICTORY_POINTS_15628:0 "Jumuparillaka"
-VICTORY_POINTS_15665:0 "Port Lemurien"
-VICTORY_POINTS_15620:0 "Peruvala"
-VICTORY_POINTS_15675:0 "Name"
-VICTORY_POINTS_14415:0 "Shakwaram"
-VICTORY_POINTS_14441:0 "Elumistdragara"
-VICTORY_POINTS_16145:0 "Agneyashila"
-VICTORY_POINTS_16229:0 "Milimia"
-VICTORY_POINTS_16244:0 "Sanggofesaran"
-VICTORY_POINTS_16193:0 "Saitasaban"
-VICTORY_POINTS_16184:0 "Nyeupe"
-VICTORY_POINTS_14439:0 "Gammon"
-VICTORY_POINTS_16179:0 "Amenie"
-VICTORY_POINTS_16171:0 "Dielle"
-VICTORY_POINTS_15687:0 "Cantanakkattai"
-VICTORY_POINTS_16013:0 "Ratu"
-VICTORY_POINTS_15672:0 "Mabusi"
-VICTORY_POINTS_14488:0 "Kilak
-VICTORY_POINTS_16330:0 "Raktarvannam"
-VICTORY_POINTS_16009:0 "Sanduro"
-VICTORY_POINTS_15608:0 "Utukalla"
-VICTORY_POINTS_15953:0 "Tangki"
-VICTORY_POINTS_
-VICTORY_POINTS_
-VICTORY_POINTS_
-VICTORY_POINTS_
-VICTORY_POINTS_
-VICTORY_POINTS_
-VICTORY_POINTS_
-VICTORY_POINTS_
-VICTORY_POINTS_
-VICTORY_POINTS_
-VICTORY_POINTS_
-VICTORY_POINTS_
-VICTORY_POINTS_
-VICTORY_POINTS_
-VICTORY_POINTS_
-VICTORY_POINTS_
-VICTORY_POINTS_
-VICTORY_POINTS_
-VICTORY_POINTS_
-VICTORY_POINTS_
-VICTORY_POINTS_
-VICTORY_POINTS_
-VICTORY_POINTS_
-VICTORY_POINTS_
-VICTORY_POINTS_
-VICTORY_POINTS_
-VICTORY_POINTS_
-VICTORY_POINTS_
-VICTORY_POINTS_
-VICTORY_POINTS_
+ VICTORY_POINTS_14748:0 "Vaalelemalolo"
+ VICTORY_POINTS_14745:0 "Kororareka"
+ VICTORY_POINTS_14773:0 "Wainuiomo"
+ VICTORY_POINTS_14817:0 "Aaioletogavao"
+ VICTORY_POINTS_14769:0 "Maugaomolimau"
+ VICTORY_POINTS_14704:0 "Faanoanoa"
+ VICTORY_POINTS_14824:0 "Setimana"
+ VICTORY_POINTS_14826:0 "Zala Osta"
+ VICTORY_POINTS_14879:0 "Alale'atagi"
+ VICTORY_POINTS_14908:0 "Mafuie"
+ VICTORY_POINTS_14869:0 "Tolulaau"
+ VICTORY_POINTS_14855:0 "Oi'oi"
+ VICTORY_POINTS_14839:0 "Lanuomea"
+ VICTORY_POINTS_14914:0 "Miriamsville"
+ VICTORY_POINTS_14920:0 "Pennston"
+ VICTORY_POINTS_14936:0 "Germaniahafen"
+ VICTORY_POINTS_14934:0 "Wrightston"
+ VICTORY_POINTS_14949:0 "Von Isignystadt"
+ VICTORY_POINTS_14966:0 "Navheza"
+ VICTORY_POINTS_14977:0 "Duneyig"
+ VICTORY_POINTS_14960:0 "Tegzusuqu"
+ VICTORY_POINTS_14988:0 "Hatmaq"
+ VICTORY_POINTS_14998:0 "Geqijji"
+ VICTORY_POINTS_15006:0 "Duqun"
+ VICTORY_POINTS_15043:0 "Joramlabnaj"
+ VICTORY_POINTS_15057:0 "Marinswade"
+ VICTORY_POINTS_15053:0 "Port Bounty"
+ VICTORY_POINTS_15050:0 "Angelston"
+ VICTORY_POINTS_15073:0 "Solstice Harbor"
+ VICTORY_POINTS_15074:0 "Lionelville"
+ VICTORY_POINTS_15082:0 "Name Please"
+ VICTORY_POINTS_15085:0 "Waponi Woo"
+ VICTORY_POINTS_15097:0 "Qna'a"
+ VICTORY_POINTS_15107:0 "Q'tir"
+ VICTORY_POINTS_15114:0 "Inirliq"
+ VICTORY_POINTS_15137:0 "Girgu"
+ VICTORY_POINTS_15149:0 "Neji"
+ VICTORY_POINTS_15162:0 "Virqq"
+ VICTORY_POINTS_15163:0 "Asetale"
+ VICTORY_POINTS_15178:0 "Vatpagchi Saeli"
+ VICTORY_POINTS_15176:0 "Muguraq"
+ VICTORY_POINTS_15206:0 "Zochtli"
+ VICTORY_POINTS_15209:0 "Labn"
+ VICTORY_POINTS_15244:0 "Manka"
+ VICTORY_POINTS_15246:0 "Nofoaga'agava'a"
+ VICTORY_POINTS_15248:0 "Awa"
+ VICTORY_POINTS_15257:0 "Vaitafematagofie"
+ VICTORY_POINTS_15269:0 "Tafolafaga"
+ VICTORY_POINTS_15280:0 "Leainilaau"
+ VICTORY_POINTS_15292:0 "Laautalatala"
+ VICTORY_POINTS_15299:0 "Tuugamau'olafu"
+ VICTORY_POINTS_15307:0 "'Aofa'arua'i"
+ VICTORY_POINTS_15328:0 "Campo Santo"
+ VICTORY_POINTS_15316:0 "Ciudad de Todorov"
+ VICTORY_POINTS_15317:0 "Tatea"
+ VICTORY_POINTS_15320:0 "Liberación"
+ VICTORY_POINTS_15339:0 "Tierra Peligrosa"
+ VICTORY_POINTS_15350:0 "Grasport"
+ VICTORY_POINTS_15360:0 "Sable Blanc"
+ VICTORY_POINTS_15368:0 "Nouvelle-Chambéry"
+ VICTORY_POINTS_15403:0 "Duhuaz"
+ VICTORY_POINTS_15407:0 "Arquvon"
+ VICTORY_POINTS_15395:0 "Jallivizen"
+ VICTORY_POINTS_15392:0 "San Leandro"
+ VICTORY_POINTS_15387:0 "Salchicha"
+ VICTORY_POINTS_15374:0 "Cruz de San Andrés"
+ VICTORY_POINTS_15417:0 "Groene Velden"
+ VICTORY_POINTS_15425:0 "Oranjehaven"
+ VICTORY_POINTS_15462:0 "Poguinho"
+ VICTORY_POINTS_15452:0 "São Vicente"
+ VICTORY_POINTS_15440:0 "Touro Preto"
+ VICTORY_POINTS_15432:0 "Solquente"
+ VICTORY_POINTS_15470:0 "Geestbai"
+ VICTORY_POINTS_15482:0 "Santa Florentina"
+ VICTORY_POINTS_14395:0 "Arena de Oro"
+ VICTORY_POINTS_14384:0 "Salvación"
+ VICTORY_POINTS_15487:0 "San Pedro"
+ VICTORY_POINTS_14398:0 "Neu Dresden"
+ VICTORY_POINTS_14401:0 "Gelbhaken"
+ VICTORY_POINTS_14409:0 "Bösestadt"
+ VICTORY_POINTS_14406:0 "Winterbucht"
+ VICTORY_POINTS_14424:0 "Süßwasser"
+ VICTORY_POINTS_14435:0 "Königshafen"
+ VICTORY_POINTS_14449:0 "Reichhaltige"
+ VICTORY_POINTS_14445:0 "Karlsbaden"
+ VICTORY_POINTS_14535:0 "Blauwasser"
+ VICTORY_POINTS_14534:0 "Schönestrand"
+ VICTORY_POINTS_14480:0 "Silberne Straße"
+ VICTORY_POINTS_14510:0 "Edwardsberg"
+ VICTORY_POINTS_14573:0 "Pitkairn"
+ VICTORY_POINTS_14944:0 "Nyrønne"
+ VICTORY_POINTS_16375:0 "Hangshuen"
+ VICTORY_POINTS_15635:0 "Lyunamtsam"
+ VICTORY_POINTS_14589:0 "Yahounan"
+ VICTORY_POINTS_14582:0 "Yimutsyu"
+ VICTORY_POINTS_15642:0 "Bongo"
+ VICTORY_POINTS_14603:0 "Hwutangrun"
+ VICTORY_POINTS_14610:0 "Shamseng"
+ VICTORY_POINTS_14646:0 "Lanumeamata"
+ VICTORY_POINTS_14625:0 "Savakiki"
+ VICTORY_POINTS_14676:0 "Araphohue"
+ VICTORY_POINTS_14700:0 "Marie's Landing"
+ VICTORY_POINTS_14698:0 "Victoria"
+ VICTORY_POINTS_14615:0 "Vavae'ese"
+ VICTORY_POINTS_14622:0 "Ofoofogia"
+ VICTORY_POINTS_14753:0 "Loto'aai"
+ VICTORY_POINTS_14754:0 "Hāpua-waikawa"
+ VICTORY_POINTS_14760:0 "Kōhīnui"
+ VICTORY_POINTS_14761:0 "Pōkēmon"
+ VICTORY_POINTS_14595:0 "Weyluchanao"
+ VICTORY_POINTS_14590:0 "Inaluregwoi"
+ VICTORY_POINTS_14725:0 "Inhumuku"
+ 
+ #Atlantis and Co
+ VICTORY_POINTS_15488:0 "Altenín"
+ VICTORY_POINTS_15493:0 "Þukerfjäll"
+ VICTORY_POINTS_15496:0 "Gudir Hjam"
+ VICTORY_POINTS_15530:0 "Akitselo"
+ VICTORY_POINTS_15500:0 "Zuhaitz"
+ VICTORY_POINTS_15512:0 "Doxa"
+ VICTORY_POINTS_15525:0 "Osoa"
+ VICTORY_POINTS_15516:0 "Anoixte"
+ VICTORY_POINTS_15498:0 "Taidorie"
+ VICTORY_POINTS_15497:0 "Chuzaseit"
+ VICTORY_POINTS_15492:0 "Taxrets"
+ VICTORY_POINTS_15598:0 "Takam"
+ VICTORY_POINTS_15599:0 "Maxat"
+ VICTORY_POINTS_15506:0 "Inaxe"
+ VICTORY_POINTS_15531:0 "Burmiunean"
+ VICTORY_POINTS_13010:0 "Reitanitz"
+ VICTORY_POINTS_15519:0 "Yamylaik"
+ VICTORY_POINTS_16420:0 "Dewbury"
+ VICTORY_POINTS_16419:0 "Fletcherton"
+ 
+ #North American Replacements
+ VICTORY_POINTS_12572:0 "Great Sky"
+ VICTORY_POINTS_7779:0 "Union River"
+ VICTORY_POINTS_11658:0 "Manzanita"
+ VICTORY_POINTS_610:0 "Eureka"
+ VICTORY_POINTS_4607:0 "San Andreas"
+ VICTORY_POINTS_12571:0 "Sampson"
+ VICTORY_POINTS_10548:0 "Mannerton" 
+ VICTORY_POINTS_7820:0 "Cordial"
+ VICTORY_POINTS_15549:0 "Ollebo"
+ VICTORY_POINTS_15546:0 "Rycroft"
+ VICTORY_POINTS_4854:0 "Marquette"
+ VICTORY_POINTS_15560:0 "Punta Bruja"
+ VICTORY_POINTS_3712:0 "Concord"
+ VICTORY_POINTS_6909:0 "New Haven"
+ VICTORY_POINTS_6732:0 "Boston"
+ VICTORY_POINTS_4445:0 "Montpelier"
+ VICTORY_POINTS_3732:0 "Augusta"
+ VICTORY_POINTS_9758:0 "Wilmington"
+ VICTORY_POINTS_10527:0 "Yellowknife"
+ 
+ #Lemuria
+ VICTORY_POINTS_14489:0 "Huîtrier"
+ VICTORY_POINTS_16239:0 "Horaka"
+ VICTORY_POINTS_14783:0 "Jandhragara"
+ VICTORY_POINTS_16064:0 "Myrddin"
+ VICTORY_POINTS_16040:0 "Pendleville"
+ VICTORY_POINTS_16153:0 "Toqueville"
+ VICTORY_POINTS_14459:0 "Ellesburg"
+ VICTORY_POINTS_14482:0 "Romanobile"
+ VICTORY_POINTS_15653:0 "New Valkenburg"
+ VICTORY_POINTS_16088:0 "Shilvertown"
+ VICTORY_POINTS_16113:0 "Kalgatunga"
+ VICTORY_POINTS_15934:0 "Velaccamaveiyil"
+ VICTORY_POINTS_15900:0 "Turamu"
+ VICTORY_POINTS_15761:0 "Worrorra"
+ VICTORY_POINTS_15770:0 "Audenshire"
+ VICTORY_POINTS_15792:0 "Pilesbury"
+ VICTORY_POINTS_14556:0 "Anchwhirram"
+ VICTORY_POINTS_15832:0 "Guhrnstown"
+ VICTORY_POINTS_15860:0 "Kilespost"
+ VICTORY_POINTS_15842:0 "Meyerston"
+ VICTORY_POINTS_15804:0 "New Hampstead"
+ VICTORY_POINTS_16303:0 "Lemisara"
+ VICTORY_POINTS_15752:0 "Venduruntana"
+ VICTORY_POINTS_16282:0 "Biloka"
+ VICTORY_POINTS_15606:0 "Terku"
+ VICTORY_POINTS_16206:0 "Kasharaan"
+ VICTORY_POINTS_15607:0 "Vila de Sao Nicola"
+ VICTORY_POINTS_16272:0 "Ilayaci"
+ VICTORY_POINTS_15926:0 "Daly"
+ VICTORY_POINTS_15967:0 "Pitiychola"
+ VICTORY_POINTS_15977:0 "Tiwi"
+ VICTORY_POINTS_14448:0 "Dansoist"
+ VICTORY_POINTS_15685:0 "Shahan"
+ VICTORY_POINTS_15684:0 "Attupil"
+ VICTORY_POINTS_14536:0 "Yirram"
+ VICTORY_POINTS_14457:0 "Tinton"
+ VICTORY_POINTS_15827:0 "Melton"
+ VICTORY_POINTS_14518:0 "Nana Station"
+ VICTORY_POINTS_14504:0 "Elsinore"
+ VICTORY_POINTS_15833:0 "Petersby"
+ VICTORY_POINTS_15786:0 "Vikteria"
+ VICTORY_POINTS_15776:0 "Pama Station"
+ VICTORY_POINTS_14472:0 "Tetinar"
+ VICTORY_POINTS_16072:0 "Morganastown"
+ VICTORY_POINTS_16036:0 "Agarston"
+ VICTORY_POINTS_15681:0 "Palivari"
+ VICTORY_POINTS_15683:0 "Merkku"
+ VICTORY_POINTS_15686:0 "Kumagandarivi"
+ VICTORY_POINTS_14464:0 "Nusedrimana"
+ VICTORY_POINTS_14466:0 "Manhakadrigiri"
+ VICTORY_POINTS_15713:0 "Atika"
+ VICTORY_POINTS_15720:0 "Bhamavani"
+ VICTORY_POINTS_15728:0 "Nandrigura"
+ VICTORY_POINTS_15739:0 "Tumi"
+ VICTORY_POINTS_15731:0 "Desdinraga"
+ VICTORY_POINTS_14570:0 "Mulatanam"
+ VICTORY_POINTS_15930:0 "Laragiya"
+ VICTORY_POINTS_15906:0 "Jarraka"
+ VICTORY_POINTS_15960:0 "Kura Kati"
+ VICTORY_POINTS_15970:0 "Gundrasupitla"
+ VICTORY_POINTS_15981:0 "Umbugaria"
+ VICTORY_POINTS_15609:0 "Nilam"
+ VICTORY_POINTS_15987:0 "Sitanamupra"
+ VICTORY_POINTS_15994:0 "Deviyo"
+ VICTORY_POINTS_15621:0 "Kantoru"
+ VICTORY_POINTS_16023:0 "Denitoramma"
+ VICTORY_POINTS_15628:0 "Jumuparillaka"
+ VICTORY_POINTS_15665:0 "Port Lémurien"
+ VICTORY_POINTS_15620:0 "Peruvala"
+ VICTORY_POINTS_15675:0 "Ishiram"
+ VICTORY_POINTS_14415:0 "Shakwaram"
+ VICTORY_POINTS_14441:0 "Elumistdragara"
+ VICTORY_POINTS_16145:0 "Agneyashila"
+ VICTORY_POINTS_16229:0 "Milimia"
+ VICTORY_POINTS_16244:0 "Sanggofesaran"
+ VICTORY_POINTS_16193:0 "Saitasaban"
+ VICTORY_POINTS_16184:0 "Nyeupe"
+ VICTORY_POINTS_14439:0 "Gammon"
+ VICTORY_POINTS_16179:0 "Amenie"
+ VICTORY_POINTS_16171:0 "Dielle"
+ VICTORY_POINTS_15687:0 "Cantanakkattai"
+ VICTORY_POINTS_16013:0 "Ratu"
+ VICTORY_POINTS_15672:0 "Mabusi"
+ VICTORY_POINTS_14488:0 "Kilak
+ VICTORY_POINTS_16330:0 "Raktarvannam"
+ VICTORY_POINTS_16009:0 "Sanduro"
+ VICTORY_POINTS_15608:0 "Utukalla"
+ VICTORY_POINTS_15953:0 "Tangki"
+ VICTORY_POINTS_15935:0 "Camaveiyil"
+ VICTORY_POINTS_15723:0 "Kilak"
