A few Antarctic Updates

--- a/localisation/aml_state_names_l_english.yml
+++ b/localisation/aml_state_names_l_english.yml
@@ -294,18 +294,18 @@
  STATE_1121:0 "Arctic Islands"
  STATE_1122:0 "Svalbard"
  STATE_1123:0 "Severnaya Zemlya"
- STATE_1124:0 "Antarctic"
+ STATE_1124:0 "Ellsworth Land"
  STATE_1125:0 "Marion Island"
  STATE_1126:0 "Îles Crozet"
  STATE_1127:0 "Farragut Islands"
  STATE_1128:0 "Clipperton Island"
  STATE_1129:0 "West Marie Byrd Land"
- STATE_1130:0 "Antarctica 3"
- STATE_1131:0 "Antarctica 4"
- STATE_1132:0 "Antarctica 5"
- STATE_1133:0 "Antarctica 6"
- STATE_1134:0 "Antarctica 7"
- STATE_1135:0 "Antarctica 8"
+ STATE_1130:0 "Neuschwabenland"
+ STATE_1131:0 "Queen Maud Land"
+ STATE_1132:0 "Enderby Land"
+ STATE_1133:0 "Kemp Land"
+ STATE_1134:0 "Wilhelm II Land"
+ STATE_1135:0 "Whenuahukapapa"
  STATE_1136:0 "French Kanaganesia"
  STATE_1137:0 "Spratley Islands"
  STATE_1138:0 "Paracel Islands"
