--- a/localisation/replace/aml_countries_l_english.yml
+++ b/localisation/replace/aml_countries_l_english.yml
@@ -1896,6 +1896,21 @@
  ATC_neutrality_ADJ:0 "Antarctic"
  ATC_communism_ADJ:0 "Antarctic"
  ATC_monarchism_ADJ:0 "Antarctic"
+ UNA_fascism:0 "Antarctic Empire"
+ UNA_fascism_DEF:0 "Antarctic Empire"
+ UNA_democratic:0 "UN Antarctica"
+ UNA_democratic_DEF:0 "United Nations Antarctica"
+ UNA_neutrality:0 "UN Antarctica"
+ UNA_neutrality_DEF:0 "United Nations Antarctica"
+ UNA_monarchism:0 "Kingdom of Antarctica"
+ UNA_monarchism_DEF:0 "the Kingdom of Antarctica"
+ UNA_communism:0 "Peoples Republic of Antarctica"
+ UNA_communism_DEF:0 "the Peoples Republic of Antarctica"
+ UNA_fascism_ADJ:0 "Antarctic"
+ UNA_democratic_ADJ:0 "Antarctic"
+ UNA_neutrality_ADJ:0 "Antarctic"
+ UNA_communism_ADJ:0 "Antarctic"
+ UNA_monarchism_ADJ:0 "Antarctic"
  RGD_neutrality:0 "Rio Grande"
  RGD_neutrality_DEF:0 "the Rio Grande"
  RGD_fascism:0 "Rio Grande"
@@ -1917,10 +1932,10 @@
  NSW_democratic_DEF:0 "the New Swabian Republic"
  NSW_neutrality:0 "New Swabian Republic"
  NSW_neutrality_DEF:0 "the New Swabian Republic"
- NSW_monarchism:0 "Kingdom of New Swabian"
- NSW_monarchism_DEF:0 "the Kingdom of New Swabian"
- NSW_communism:0 "Peoples Republic of New Swabian"
- NSW_communism_DEF:0 "the Peoples Republic of New Swabian"
+ NSW_monarchism:0 "Kingdom of New Swabia"
+ NSW_monarchism_DEF:0 "the Kingdom of New Swabia"
+ NSW_communism:0 "Peoples Republic of New Swabia"
+ NSW_communism_DEF:0 "the Peoples Republic of New Swabia"
  NSW_fascism_ADJ:0 "New Swabian"
  NSW_democratic_ADJ:0 "New Swabian"
  NSW_neutrality_ADJ:0 "New Swabian"
@@ -1940,7 +1955,7 @@
  UTR_democratic_ADJ:0 "Rangioran"
  UTR_neutrality_ADJ:0 "Rangioran"
  UTR_communism_ADJ:0 "Rangioran"
- UTR_monarchism_ADJ:0 "Rangioran"Meropis
+ UTR_monarchism_ADJ:0 "Rangioran"
  AME_fascism:0 "Meropan Empire"
  AME_fascism_DEF:0 "Meropan Empire"
  AME_democratic:0 "Republic of Meropis"
