FMU annexation events now work

--- a/localisation/FMU_l_english.yml
+++ b/localisation/FMU_l_english.yml
@@ -425,25 +425,52 @@
  FMU_white_immigration_laws:1 "White Immigration Laws"
  FMU_ache_of_war:1 "The Ache of War"
  FMU_pay_back_debt_to_the_ifc_category:0 "Paying the last of the reparations."
- fmu.4.t:0 "Integrate Manu"
- fmu.4.d:0 "At long last the time to fully bury the damned Treaty of Versailles has come! Freistaaten von Mu has reached out to us with a proposal that, if we accept, will bring prosperity and safety to our people. Let us put the evils of the past behind and march forward into a glorious future together!"
- fmu.4.a:0 "Accept the proposal"
- fmu.4.b:0 "Reject the proposal"
- fmu.5.t:0 "Manu Accepts"
- fmu.5.d:0 "Manu Accepts"
- fmu.13.t:0 "Manu Rejects the Proposal"
- fmu.13.d:0 "The fools in Manu have gone so far as to reject our overtures at reuniting with our great nation. Thunderous fools! Now we must decide what course of action to take; should we continue to pursue the annexation or leave them to their rank ignorance?"
- fmu.13.a:0 "Oh well"
- fmu.13.b:0 "We informing them, not offering."
- fmu.12.t:0 "Annex Schonland"
- fmu.12.d:0 "Years ago we aided each other in our quest for independence from the Dutch Crown. Now, we can once again stand together for the unity and strength of the German peoples!"
- fmu.12.a:0 "Reject"
- fmu.12.b:0 "Accept"
- fmu.20.t:0 "Annex Vogelinsel"
- fmu.20.d:0 "For too long have we been nations and peoples divided. Vogelinsel and Freistaaten von Mu have a long history of working together and fighting side by side for the good of our people. We must not let this opportunity go by - we must unite as one nation to bring security and peace to our people!"
- fmu.20.a:0 "Reject"
- fmu.20.b:0 "Become a puppet"
- fmu.20.c:0 "Become Annexed"
+ fmu.1.t:0 "Integrate Manu"
+ fmu.1.d:0 "At long last the time to fully bury the damned Treaty of Versailles has come! Freistaaten von Mu has reached out to us with a proposal that, if we accept, will bring prosperity and safety to our people. Let us put the evils of the past behind and march forward into a glorious future together!"
+ fmu.1.a:0 "Accept the proposal"
+ fmu.1.b:0 "Reject the proposal"
+ fmu.2.t:0 "Manu Accepts"
+ fmu.2.d:0 "In their great wisdom the representatives of Manu have elected to unite themselves once again with Freistaaten von Mu, the true power on the Muan continent."
+ fmu.2.a:0 "Excellent"
+ fmu.3.t:0 "Manu Rejects the Proposal"
+ fmu.3.d:0 "The fools in Manu have rejected our overtures at reuniting with our great nation and in fact they've even voted to end the special relationship between our nations, claiming that they will no longer consent to being our 'puppet'. Thunderous fools! Now we must decide what course of action to take; should we continue to pursue the annexation or leave them to their rank ignorance?"
+ fmu.3.a:0 "How dare they!?!"
+ fmu.4.t:0 "Manu Rejects the Proposal"
+ fmu.4.d:0 "We must now decide if we will back down and let Manu go peacefully or if we will assert our right as the rightful government of all our lands."
+ fmu.4.a:0 "Oh well"
+ fmu.4.b:0 "We informing them, not offering."
+ fmu.5.t:0 "Join Freistaaten von Mu?"
+ fmu.5.d:0 "Years ago we aided each other in our quest for independence from the Dutch Crown. Now, we can once again stand together for the unity and strength of the German peoples!"
+ fmu.5.a:0 "Reject"
+ fmu.5.b:0 "Accept"
+ fmu.5.c:0 "Join the Axis instead"
+ fmu.6.t:0 "Schonland Rejects!"
+ fmu.6.d:0 "The fools of Schoenland have rejected our overtures to unite as one germanic people and bring order and civilization to this hemisphere."
+ fmu.6.a:0 "They will regret their folly."
+ fmu.7.t:0 "Schonland Accepts!"
+ fmu.7.d:0 "We are now stronger! We continue to gather the Muan Germans under a single banner which will bring civilization and order to the continent."
+ fmu.7.a:0 "Gut gemacht!"
+ fmu.8.t:0 "Schonland Joins the Axis"
+ fmu.8.d:0 "Schoenland has declared that the distance between our borders presents too great a difficulty for administering a single nation, however they have contacted the Fatherland and placed themselves under their aegis, where all good Germans belong."
+ fmu.8.a:0 "Close enough."
+ fmu.9.t:0 "The Annexation of Vogelinsel"
+ fmu.9.d:0 "For too long have we been nations and peoples divided. Vogelinsel and Freistaaten von Mu have a long history of working together and fighting side by side for the good of our people. We must not let this opportunity go by - we must unite as one nation to bring security and peace to our people!"
+ fmu.9.a:0 "Reject"
+ fmu.9.b:0 "Become a puppet"
+ fmu.9.c:0 "Accede to annexation"
+ fmu.10.t:0 "Vogelinsel Rejects!"
+ fmu.10.d:0 "Vogelinsel has declared that they are not interested in closer ties, despite the many benefits that union would bring them."
+ fmu.10.a:0 "Let them fail alone."
+ fmu.10.b:0 "They shall rue the day..."
+ fmu.11.t:0 "Vogelinsel Pledges Fealty"
+ fmu.11.d:0 "Vogelinsel has passed a set of laws that make them a direct satellite of our nation. While we would have preferred outright annexation this is not bad news."
+ fmu.11.a:0 "This is acceptable"
+ fmu.12.t:0 "Vogelinsel Accepts Annexation"
+ fmu.12.d:0 "The collection of Muan Germans grows daily! Now our close neighbors in Vogelinsel are no longer well known neighbors but brothers in our growing and mighty nation."
+ fmu.12.a:0 "Ausgezeichnet!"
+ 
+ 
+ 
  fmu.24.t:0 "The Pan German Union"
  fmu.24.d:0 "Freistaaten von Mu has approached us with a proposal; to join in a Pan-German Union which will once again bring us closer to the Fatherland and will bind us together as one German people."
  fmu.24.a:0 "We shall join them!"
