--- a/localisation/replace/aml_countries_l_english.yml
+++ b/localisation/replace/aml_countries_l_english.yml
@@ -1891,11 +1891,11 @@
  TAR_monarchism_DEF:0 "the Kingdom of Tartaria"
  TAR_communism:0 "Tartarian Socialist Republic"
  TAR_communism_DEF:0 "the Tartarian Socialist Republic"
- TAR_fascism_ADJ:0 "Tartarian"
- TAR_democratic_ADJ:0 "Tartarian"
- TAR_neutrality_ADJ:0 "Tartarian"
- TAR_communism_ADJ:0 "Tartarian"
- TAR_monarchism_ADJ:0 "Tartarian"
+ TAR_fascism_ADJ:0 "Tartar"
+ TAR_democratic_ADJ:0 "Tartar"
+ TAR_neutrality_ADJ:0 "Tartar"
+ TAR_communism_ADJ:0 "Tartar"
+ TAR_monarchism_ADJ:0 "Tartar"
  ATC_fascism:0 "Antarctic Empire"
  ATC_fascism_DEF:0 "Antarctic Empire"
  ATC_democratic:0 "League of Nations Antarctica"
