--- a/localisation/aml_expo_l_english.yml
+++ b/localisation/aml_expo_l_english.yml
@@ -1,6 +1,6 @@
 ﻿l_english:
  amlexpo.0.t:0 "Welcome to The AML Project"
- amlexpo.0.d:0 "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis velit nulla, malesuada sit amet augue et, aliquet vulputate diam. Integer elit ante, ornare eget placerat sit amet, vehicula eu libero. Integer vitae maximus \n\n magna, vitae cursus nisl. Aenean tincidunt vel quam non gravida. Vestibulum eu ullamcorper velit. Duis sed augue tempus risus egestas suscipit. Nam fermentum euismod ultrices. \n\nNullam id odio elit. Nam viverra auctor mauris non condimentum. Pellentesque fringilla eros velit, a auctor nisl semper et." #this is the space you have to work with
+ amlexpo.0.d:0 "AML is a mod in which alot of the weird maps the Europeans (and others) made were actually true and as such we do our best to make them make sense geologically and incorporate them in the best way possible with OTL. \n\nThis project is a product of a LOT of research was put into the development of the mod and each land feature was thoughtfully discussed, debated, and included. \n\nWe hope to continue expanding the world until such a point the OTL and AML would be very difficult tell apart, we hope you enjoy." #this is the space you have to work with
  amlexpo.0.a:0 "Atlantis"
  amlexpo.0.b:0 "Mu"
  amlexpo.0.c:0 "Trynsuyin"
@@ -22,7 +22,7 @@
  amlexpo.10.a:0 "Like game of thrones? Yes Jimmy like game of thrones"
  
  amlexpo.20.t:0 "Welcome to the Trynsuyin Republc"
- amlexpo.20.d:0 "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis velit nulla, malesuada sit amet augue et, aliquet vulputate diam. Integer elit ante, ornare eget placerat sit amet, vehicula eu libero. Integer vitae maximus \n\n magna, vitae cursus nisl. Aenean tincidunt vel quam non gravida. Vestibulum eu ullamcorper velit. Duis sed augue tempus risus egestas suscipit. Nam fermentum euismod ultrices. \n\nNullam id odio elit. Nam viverra auctor mauris non condimentum. Pellentesque fringilla eros velit, a auctor nisl semper et." #this is the space you have to work with
+ amlexpo.20.d:0 "A nation burdened by extreme debt and on the brink of financial collapse. All to contain your historic rival, the nation of Houpo'e who capabilities rival your own. Japan has wormed their way into every facet of government and banking institutions.\n\ With time running out the choices arent great as the military hasnt been paid to delay defaulting on your debt. The bill comes due, always does.\n\The options to chose are to painfully downscale your military capabilities or sucumb to your loan shark and be nothing more than a pupper doing your masters bidding." #this is the space you have to work with
  amlexpo.20.a:0 "Like game of thrones? Yes Jimmy like game of thrones"
  
  amlexpo.30.t:0 "Welcome to the Friestaater von Mu"
