--- a/localisation/aml_expo_l_english.yml
+++ b/localisation/aml_expo_l_english.yml
@@ -22,7 +22,7 @@
  amlexpo.10.a:0 "Like game of thrones? Yes Jimmy like game of thrones"
  
  amlexpo.20.t:0 "Welcome to the Trynsuyin Republc"
- amlexpo.20.d:0 "A nation burdened by extreme debt and on the brink of financial collapse. All to contain your historic rival, the nation of Houpo'e who capabilities rival your own. Japan has wormed their way into every facet of government and banking institutions.\n\ With time running out the choices arent great as the military hasnt been paid to delay defaulting on your debt. The bill comes due, always does.\n\The options to chose are to painfully downscale your military capabilities or sucumb to your loan shark and be nothing more than a pupper doing your masters bidding." #this is the space you have to work with
+ amlexpo.20.d:0 "A nation burdened by extreme debt and on the brink of financial collapse. All to contain your historic rival, the nation of Houpo'e who capabilities rival your own. Japan has wormed their way into every facet of government and banking institutions.\n\n With time running out the choices arent great as the military hasnt been paid to delay defaulting on your debt. The bill comes due, always does.\n\nThe options to chose are to painfully downscale your military capabilities or sucumb to your loan shark and be nothing more than a pupper doing your masters bidding." #this is the space you have to work with
  amlexpo.20.a:0 "Like game of thrones? Yes Jimmy like game of thrones"
  
  amlexpo.30.t:0 "Welcome to the Friestaater von Mu"
