--- a/localisation/aml_expo_l_english.yml
+++ b/localisation/aml_expo_l_english.yml
@@ -30,8 +30,8 @@
  amlexpo.30.a:0 "Glorious in the Eyes of God"
  
  amlexpo.40.t:0 "Welcome to the Kingdom of Yohannia"
- amlexpo.40.d:0 "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis velit nulla, malesuada sit amet augue et, aliquet vulputate diam. Integer elit ante, ornare eget placerat sit amet, vehicula eu libero. Integer vitae maximus \n\n magna, vitae cursus nisl. Aenean tincidunt vel quam non gravida. Vestibulum eu ullamcorper velit. Duis sed augue tempus risus egestas suscipit. Nam fermentum euismod ultrices. \n\nNullam id odio elit. Nam viverra auctor mauris non condimentum. Pellentesque fringilla eros velit, a auctor nisl semper et." #this is the space you have to work with
- amlexpo.40.a:0 "All Under God We Serve"
+ amlexpo.40.d:0 "Yohannia, a power growing in strength even after having her hinterland ripped from her. Now with Ethiopia being threatened a diffcult choice has to be made, fight before they are ready or sacrifice ethiopia to buy time.\n\n Roderiq an unparalled genius leads Yohannia with great appeal. A nationistic fervor only matched by her appatite for revenge. Finish the fight the British foolishly started. \nAn African David fighting Colonialist Goliaths?"" #this is the space you have to work with
+ amlexpo.40.a:0 "Fate leads the willing, and drags the unwilling."
  
  amlexpo.50.t:0 "Welcome to GLORIOUS TODOROVIA"
  amlexpo.50.d:0 "Founded by the Great Fyodor Todorov in 1838, Todorovia lead the fight to free the other Spanish Muan colonies. As the core of the United States of Mu, Todorovia showed the other former Spanish states the light of freedom. But it was not to last for long as the other states seceeded from the USM. Despite Todorov and his successors' efforts, the other states were to declare their so called independence. The Great Leader, sensing the need for a strong central government, brought the nation under his enlightened leadership. Now enemies prowl about searching for weakness, but Todorovia is strong!" #this is the space you have to work with
