--- a/localisation/replace/aml_victory_points_l_english.yml
+++ b/localisation/replace/aml_victory_points_l_english.yml
@@ -24,8 +24,11 @@
  VICTORY_POINTS_16345:0 "Qapeta"
  VICTORY_POINTS_16342:0 "Qarghi"
  VICTORY_POINTS_13062:0 "Chersky"
- 
- 
+ VICTORY_POINTS_16392:0 "Zerzura"
+ VICTORY_POINTS_16395:0 "Nayzas"
+ VICTORY_POINTS_16390:0 "Tungul"
+ VICTORY_POINTS_16384:0 "Ptolmey"
+ VICTORY_POINTS_5060:0 "Vrokima"
  #Australia
  VICTORY_POINTS_8186:0 "Port Augusta"
  VICTORY_POINTS_10927:0 "Andamooka"
