--- a/localisation/replace/aml_victory_points_l_english.yml
+++ b/localisation/replace/aml_victory_points_l_english.yml
@@ -33,7 +33,11 @@
  VICTORY_POINTS_8186:0 "Port Augusta"
  VICTORY_POINTS_10927:0 "Andamooka"
  VICTORY_POINTS_1077:0 "Broken Hill"
- #Elysia
+ #Elysia+Antarctica
+ VICTORY_POINTS_14206:0 "Völkdenz"
+ VICTORY_POINTS_14125:0 "Winternacht"
+ VICTORY_POINTS_14198:0 "Linenburg"
+ VICTORY_POINTS_14229:0 "Rheinmünster"
  VICTORY_POINTS_13131:0 "Muru'ona"
  VICTORY_POINTS_10769:0 "Monterrey"
  VICTORY_POINTS_12835:0 "Nuevo Laredo"
