Nilotia, but flag no work

--- a/localisation/aml_state_names_l_english.yml
+++ b/localisation/aml_state_names_l_english.yml
@@ -264,7 +264,7 @@
  STATE_1064:0 "Oeyamon"
  STATE_1065:0 "Kaffa-Sidamo"
  STATE_1066:0 "Hararghe-Bale"
- STATE_1067:0 "South Sudan"
+ STATE_1067:0 "Nilotia"
  STATE_1068:0 "Melilani"
  STATE_1069:0 "Eastern Congo"
  STATE_1070:0 "Great Rift Valley"
