--- a/localisation/replace/aml_countries_l_english.yml
+++ b/localisation/replace/aml_countries_l_english.yml
@@ -1990,8 +1990,8 @@
  NIL_fascism_DEF:0 "the Nilotian Empire"
  NIL_democratic:0 "Republic of Nilotia"
  NIL_democratic_DEF:0 "the Republic of Nilotia"
- NIL_neutrality:0 "Republic of Nilotia"
- NIL_neutrality_DEF:0 "the Republic of Nilotia"
+ NIL_neutrality:0 "Principality of Nilotia"
+ NIL_neutrality_DEF:0 "the Principality of Nilotia"
  NIL_monarchism:0 "Principality of Nilotia"
  NIL_monarchism_DEF:0 "the Principality of Nilotia"
  NIL_communism:0 "Peoples Republic of Nilotia"
